src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0005.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0005 {
  interface i;
  class c;
  enum e;
}